--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,14 +1,13 @@
-name: Lint Code
+name: Audit Code
 
 on:
   push:
     branches:
-      - "**"
-  pull_request:
-    branches:
-      - "**"
+      - main
+      - release
+
 jobs:
-  run-lint:
+  audit:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,5 +21,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linter
-        run: npm run lint
+      - name: Run security audit
+        run: npm audit --production
