--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Lint Code
+name: Build Project
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     branches:
       - "**"
 jobs:
-  run-lint:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,5 +22,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linter
-        run: npm run lint
+      - name: Build the project
+        run: npm run build
