--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - main
-      - release
+      - release-2
 
 jobs:
   audit:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
